# sporttrack-ai

./: .gitignore  CLAUDE.md  README.md  app.py  pose_processor.py  pyproject.toml  requirements.txt  start.sh  vercel.json
static/css/: style.css
static/js/: main.js
templates/: index.html
