[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sporttrack-ai"
version = "1.0.0"
description = "AI-powered sports technique analysis using MediaPipe pose detection"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "FuzzyLabs", email = "info@fuzzylabs.ai"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=3.0.0",
    "opencv-python-headless>=4.8.1.78",
    "mediapipe>=0.10.21",
    "numpy<2.0.0",
    "werkzeug>=3.0.1",
    "pillow>=10.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/fuzzylabs/sporttrack"
Repository = "https://github.com/fuzzylabs/sporttrack.git"
Issues = "https://github.com/fuzzylabs/sporttrack/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "static*", "templates*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | static
  | templates
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true